# lap_dev_ws

./: README.md
install/: local_setup.sh  setup.sh
install/amr_lan_2/share/amr_lan_2/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr_lan_2_mesh/share/amr_lan_2_mesh/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/amr_lan_3/share/amr_lan_3/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/custom_laser_filter/lib/custom_laser_filter/: laser_filter
install/custom_laser_filter/share/custom_laser_filter/: package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/duobot_one/share/duobot_one/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/hinson_hardware/include/hinson_hardware/: hinson_system.hpp
install/hinson_hardware/share/hinson_hardware/: hinson_hardware.xml  local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/lap_thu_amr_description/share/lap_thu_amr_description/: local_setup.bash  (+9 more)
log/: latest_build
src/amr_lan_2/: CMakeLists.txt  package.xml
src/amr_lan_2/config/: view_bot.rviz
src/amr_lan_2/description/: gazebo_control.xacro  robot.urdf.xacro  robot_core.xacro
src/amr_lan_2/launch/: launch_sim.launch.py  rsp.launch.py
src/amr_lan_2/meshes/: base_footprint.STL  caster_wheel_right_front.STL
src/amr_lan_2_mesh/: CMakeLists.txt  package.xml
src/amr_lan_2_mesh/config/: controllers.yaml
src/amr_lan_2_mesh/description/: gazebo_control.xacro  lidar.xacro  lidar_xacro.txt  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro  temp_2  tmep
src/amr_lan_2_mesh/launch/: launch_robot.launch.py  launch_sim.launch.py  rsp.launch.py
src/amr_lan_2_mesh/meshes/: base_link.STL  imu_link.STL  right_wheel.STL
src/amr_lan_3/: CMakeLists.txt
src/amr_lan_3/config/: my_controllers.yaml
src/amr_lan_3/description/: lidar.xacro  robot.urdf.xacro  robot_core.xacro  ros2_control.xacro
src/amr_lan_3/launch/: launch_robot.launch.py  launch_sim.launch.py  rplidar.launch.py  rsp.launch.py
src/amr_lan_3/worlds/: obstacle_1.world
src/custom_laser_filter/: package.xml  setup.cfg  setup.py
src/custom_laser_filter/custom_laser_filter/: laser_filter_node.py
src/hinson_hardware/: CMakeLists.txt  hinson_hardware.xml
src/hinson_hardware/include/hinson_hardware/: hinson_system.hpp
src/hinson_hardware/src/: hinson_system.cpp
src/lap_thu_amr_description/: CMakeLists.txt  package.xml
src/lap_thu_amr_description/launch/: gazebo.launch.py  rsp.launch.py
src/lap_thu_amr_description/meshes/: laser_frame.STL  left_wheel.STL
src/lap_thu_amr_description/rviz/: urdf_1.rviz
src/lap_thu_amr_description/urdf/: lap_thu_AMR_test_2.urdf.xacro  temp
(+132 files in other folders)
